--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,7 @@
     </head>
     <body onload="doit();">
         <div class="app">
+        <div id="d" width="100px" height="100px" style="background-color:#AAAAAA;"></div>
         <img width="400px" height="400px" id="i"/>
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
