Commit 2 - Added div for shadowed circle

--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,7 @@
         </script>
 
     </head>
-    <body onload="doit();">
+    <body>  <!--    <body onload="doit();">
         <div class="app">
         <div id="d" width="100px" height="100px" style="background-color:#AAAAAA;"></div>
         <img width="400px" height="400px" id="i"/>
@@ -87,5 +87,15 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+              -->
+    
+    <div style="width:64px;height:64px;position:relative;padding-left:12px;">
+        <svg height="40" width="40">
+            <circle cx="20" cy="20" r="20" fill="white" />
+        </svg>
+        <div style="position:absolute;top:0px;width:40px;height:40px;box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius:20px;"></div>
+        <div style="position:absolute;top:0px;width:40px;height:40px;box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2); border-radius:20px;"></div>
+    </div>
+    
     </body>
 </html>
